# sparkrun

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPERS.md  README.md  RECIPES.md  dev.sh  pyproject.toml  run-recipe.sh  versions.yaml
.claude-plugin/: marketplace.json
.github/workflows/: publish-npm.yml
docs/: ARCHITECTURE.md  EXECUTORS.md  MULTIPLATFORM.md  RELEASE_NOTES.md  SECURITY.md
scripts/: rollover-release.sh  update-versions.py
sparkrun-antigravity-plugin/: plugin.json
sparkrun-antigravity-plugin/skills/sparkrun-agentic-inference/: SKILL.md
sparkrun-antigravity-plugin/skills/sparkrun-benchmark-workflow/: SKILL.md
sparkrun-cc-plugin/: README.md
sparkrun-cc-plugin/.claude-plugin/: plugin.json
sparkrun-cc-plugin/commands/: benchmark.md  list.md  monitor.md  proxy.md  run.md  setup.md  status.md  stop.md  tune.md.disabled
sparkrun-cc-plugin/skills/registry/: SKILL.md
sparkrun-cc-plugin/skills/run/: SKILL.md
sparkrun-cc-plugin/skills/setup/: SKILL.md
sparkrun-openclaw-plugin/: LICENSE  README.md  index.ts  openclaw.plugin.json  package.json  tsconfig.json
sparkrun-openclaw-plugin/skills/registry/: SKILL.md
sparkrun-openclaw-plugin/skills/run/: SKILL.md
sparkrun-openclaw-plugin/skills/setup/: SKILL.md
src/sparkrun/agent/: __init__.py  harness.py  state.py
src/sparkrun/api/: __init__.py  _benchmark.py  _benchmark_models.py  _context.py  _errors.py  _hosts.py  _jobs.py  _logs.py  _models.py  _resolve.py  _run.py  _schedule.py  _status.py  _stop.py
src/sparkrun/arena/: __init__.py  auth.py  upload.py
src/sparkrun/benchmarking/: aggregator.py  base.py  llama_benchy.py  progress_ui.py  run_state.py  scheduler.py  tool_eval_bench.py
src/sparkrun/builders/: _ghcr.py  base.py  eugr.py
src/sparkrun/cli/: __init__.py  _adv.py  _agent.py  _arena.py  _arena_flow.py  _benchmark.py  _cluster.py  _common.py  _export.py  _monitor_tui.py  _proxy.py  _recipe.py  _registry.py  _run.py  _self_update.py  _setup.py  _stop_logs.py  _tune.py  _uninstall.py  _wizard.py
src/sparkrun/containers/: distribute.py  registry.py  sync.py
src/sparkrun/core/: backend_select.py  benchmark_profiles.py  bootstrap.py  channels.py  cluster_manager.py  cluster_status.py  config.py  context.py  fingerprint.py  hardware.py  hardware_probe.py  hosts.py  launcher.py  layout.py  limits.py  mods.py  monitoring.py  parallelism.py  pending_ops.py  placement.py  progress.py  prometheus.py  recipe.py  registry.py  resolve.py  scheduler.py  setup_manifest.py  svd_import.py  version.py
src/sparkrun/diagnostics/: __init__.py  ndjson_writer.py  run_collector.py  spark_collector.py
src/sparkrun/models/: distribute.py  download.py  fit.py  gguf.py  quantization.py  sync.py  vram.py
src/sparkrun/orchestration/: comm_env.py  disk_info.py  distribution.py  docker.py  docker_info.py  executor.py  executor_docker.py  executor_k8s.py  executor_local.py  health.py  hooks.py  infiniband.py  job_metadata.py  networking.py  nv_monitor.py  primitives.py  scripts.py  ssh.py  sudo.py  transfer.py
tests/: conftest.py  test_agent.py  test_api_benchmark.py  test_api_hosts_resolve.py  test_api_run_stop_logs.py  test_api_schedule_status_jobs.py  test_api_sctx_threading.py  test_api_skeleton.py  test_arena.py  test_atlas_runtime.py  test_backend_select.py  test_benchmark.py  test_benchmark_aggregator.py  test_benchmark_api_migration.py  test_benchmark_arena_flow.py  test_benchmark_category.py  test_benchmark_cli_category_dispatch.py  test_benchmark_container_pin.py  test_benchmark_plugin_hooks.py  test_benchmark_progress_ui.py  test_benchmark_resume_intent_id.py  test_benchmark_resume_modes.py  test_benchmark_run_state.py  test_benchmark_scheduler.py  test_bootstrap.py  test_builder.py  test_cleanup_after_failure.py  test_cli.py  test_cli_cluster_import.py  test_cli_diagnose.py  test_cli_recipe.py  test_cluster_definition_executor.py  test_cluster_id_targets.py  test_cluster_manager.py  test_collectives.py  test_config.py  test_config_benchmark_default.py  test_dense_pack_scheduler.py  test_diagnostics.py  test_disk_info.py  (+101 more)
website/: astro.config.mjs
(+134 files in other folders)
